Fix: Style bleeding issue and configuration of tailwindcss

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,4 @@
 
+.App{
+    /* background: var(--primary-50); */
+}
